1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (o_globalZone): Make jobject, not jclass.
	(create_class_refs, java_directory_init): Accomodate.

1999-03-23  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (create_class_refs): Type of the field global zone
	is set to swarm/GlobalZone in GetFieldId call.
	(create_class_refs): Remove diagnostics.

1999-03-22  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.m (Java_swarm_SwarmEnvironment_initSwarm): Call
	initSwarmApp before  the java_directory_init function.

	* directory.m (create_class_refs): find returns global references.
	(create_class_refs): c_object is set to a global reference to
	java.lang.Object
	(create_class_refs): c_globalZone is set to a global reference
	of a class GlobalZone obtained from SwarmEnvironment field.
	(java_directory_java_find): Set java_object field of pattern
	to global reference to an object.
	(java_instantiate): Return a global reference to a new object.

1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_class_refs): Use GetFieldID and
	GetObjectField instead of GetStaticFieldID and GetStaticObjectField
	(for globalZone).

1999-03-22  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (compare_java_objects): Move compare_java_objects 
	outside of the scope of java_directory_init. 
	Use new global variable jenv.
	(compare_objc_objects): Likewise.
	(java_directory_init): Store Java Environment to jenv global
	variable.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (libjavaswarm_la_LDFLAGS): Don't use .libs directory.
	libtool does that now.

	* directory.m (java_ensure_selector): Handle objcFlag.

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CPPFLAGS): Pass -I$(top_builddir)/libobjc.

	* directory.m (compare_java_objects, compare_objc_objects): Moved
	into java_directory_init.  Use IsSameObject for former.